# aula_06_bootcamp_python-

./: README.md  black.py  main.py  pyproject.toml
